open graph test

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Resume Göktuğ Aşcı, MD" />
-    <meta name="author" content="Göktuğ Aşcı, MD" />
+    <meta property="og:title" content="Resume Göktuğ Aşcı, MD" />
+    <meta
+      property="og:description"
+      content="I am a medical doctor who builds full-stack cross-platform mobile
+            applications. My passion is to bridge the gap between software
+            engineering and medicine; to develop data-driven, inexpensive and
+            simple, yet broadly applicable solutions to improve health care
+            quality around the world."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="assets/img/profile.png" />
+    <meta property="og:url" content="https://gasci.github.io/" />
+
     <title>Resume - Göktuğ Aşcı, MD</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -365,7 +376,6 @@
         </div>
       </section>
       <hr class="m-0" />
-      
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
