og and font updates

--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
     ></script>
     <!-- Google fonts-->
     <link
-      href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i"
+      href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
       rel="stylesheet"
       type="text/css"
     />
@@ -105,7 +100,7 @@
             <span class="text-danger"> MD</span>
           </h2>
           <div class="subheading mb-5">
-            (+90)-532-633-73-97 ·
+            (+90) 532 633 73 97 ·
             <a
               href="mailto:drgoktugasci@gmail.com"
               class="text-lowercase text-danger"
@@ -150,9 +145,9 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">
+              <h4 class="mb-0">
                 Co-Founder, Product Manager, Full-Stack Developer
-              </h3>
+              </h4>
               <div class="subheading mb-3">
                 <a
                   href="http://mealdoc.com/"
@@ -196,7 +191,7 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">Investment Analyst Intern</h3>
+              <h4 class="mb-0">Investment Analyst Intern</h4>
               <div class="subheading mb-3">
                 <a
                   href="https://www.vincivc.com/"
@@ -229,9 +224,9 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">
+              <h4 class="mb-0">
                 Co-Founder, Product Manager, Front-End Developer
-              </h3>
+              </h4>
               <div class="subheading mb-3">
                 <a
                   href="https://www.curiosmo.com/"
@@ -258,7 +253,7 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">Research Intern</h3>
+              <h4 class="mb-0">Research Intern</h4>
               <div class="subheading mb-3">
                 <a
                   href="https://medicine.yale.edu/lab/gunel/"
@@ -297,7 +292,7 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">IE SCHOOL OF HUMAN SCIENCES AND TECHNOLOGY</h3>
+              <h4 class="mb-0">IE SCHOOL OF HUMAN SCIENCES AND TECHNOLOGY</h4>
               <div class="subheading mb-3">
                 Master’s in Business Analytics and Big Data
               </div>
@@ -317,7 +312,7 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">ISTANBUL UNIVERSITY, FACULTY OF MEDICINE</h3>
+              <h4 class="mb-0">ISTANBUL UNIVERSITY, FACULTY OF MEDICINE</h4>
               <div class="subheading mb-3">Doctor of Medicine</div>
               <div>
                 <ul>
@@ -338,9 +333,9 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">
+              <h4 class="mb-0">
                 THE UNIVERSITY OF ANTWERP, SCHOOL OF MEDICINE
-              </h3>
+              </h4>
               <div class="subheading mb-3">Doctor of Medicine</div>
               <div>
                 <ul>
@@ -358,7 +353,7 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">TEV INANC HIGH SCHOOL</h3>
+              <h4 class="mb-0">TEV INANC HIGH SCHOOL</h4>
               <div class="subheading mb-3">Bachelor's Degree</div>
               <div>
                 <ul>
