font and text update

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <a
                   href="http://mealdoc.com/"
                   target="_blank"
-                  class="text-danger"
-                  >MEALDOC: AI POWERED HEALTHY DIET, HEALTHCARE</a
+                  class="text-danger text-capitalize"
+                  >Mealdoc: AI Powered Healthy Diet, Healthcare</a
                 >
               </div>
               <ul>
@@ -196,8 +196,8 @@
                 <a
                   href="https://www.vincivc.com/"
                   target="_blank"
-                  class="text-danger"
-                  >VINCI VENTURE CAPITAL</a
+                  class="text-danger text-capitalize"
+                  >Vinci Venture Capital</a
                 >
               </div>
               <ul>
@@ -231,8 +231,8 @@
                 <a
                   href="https://www.curiosmo.com/"
                   target="_blank"
-                  class="text-danger"
-                  >CURIOSMO, HEALTHCARE</a
+                  class="text-danger text-capitalize"
+                  >Curiosmo, Healthcare</a
                 >
               </div>
               <ul>
@@ -246,7 +246,7 @@
             <div class="flex-shrink-0 text-right">
               <span class="text-primary font-weight-bold">Istanbul, Turkey</span
               ><br />
-              <span class="text-primary">November 2019 - October 2021</span>
+              <span class="text-primary">November 2019 - October 2020</span>
             </div>
           </div>
           <div
@@ -258,8 +258,8 @@
                 <a
                   href="https://medicine.yale.edu/lab/gunel/"
                   target="_blank"
-                  class="text-danger"
-                  >YALE UNIVERSITY SCHOOL OF MEDICINE, GUNEL LAB</a
+                  class="text-danger text-capitalize"
+                  >Yale University School of Medicine, Gunel Lab</a
                 >
               </div>
               <ul>
@@ -293,7 +293,7 @@
           >
             <div class="flex-grow-1">
               <h4 class="mb-0">IE SCHOOL OF HUMAN SCIENCES AND TECHNOLOGY</h4>
-              <div class="subheading mb-3">
+              <div class="subheading mb-3 text-capitalize">
                 Master’s in Business Analytics and Big Data
               </div>
               <div>
@@ -313,7 +313,7 @@
           >
             <div class="flex-grow-1">
               <h4 class="mb-0">ISTANBUL UNIVERSITY, FACULTY OF MEDICINE</h4>
-              <div class="subheading mb-3">Doctor of Medicine</div>
+              <div class="subheading mb-3 text-capitalize">Doctor of Medicine</div>
               <div>
                 <ul>
                   <li>
@@ -336,7 +336,7 @@
               <h4 class="mb-0">
                 THE UNIVERSITY OF ANTWERP, SCHOOL OF MEDICINE
               </h4>
-              <div class="subheading mb-3">Doctor of Medicine</div>
+              <div class="subheading mb-3 text-capitalize">Doctor of Medicine</div>
               <div>
                 <ul>
                   <li>ERASMUS Program | ERASMUS Scholarship</li>
@@ -353,8 +353,8 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h4 class="mb-0">TEV INANC HIGH SCHOOL</h4>
-              <div class="subheading mb-3">Bachelor's Degree</div>
+              <h4 class="mb-0">TEV İNANÇ HIGH SCHOOL</h4>
+              <div class="subheading mb-3 text-capitalize">Bachelor's Degree</div>
               <div>
                 <ul>
                   <li>A Privately Funded High School for Gifted Students</li>
