--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta property="og:title" content="Resume Göktuğ Aşcı, MD" />
+    <meta property="og:title" content="Göktuğ Aşcı, MD" />
     <meta
       property="og:description"
       content="I am a medical doctor who builds full-stack cross-platform mobile
@@ -19,7 +19,7 @@
     <meta property="og:image" content="assets/img/profile.png" />
     <meta property="og:url" content="https://gasci.github.io/" />
 
-    <title>Resume - Göktuğ Aşcı, MD</title>
+    <title>Göktuğ Aşcı, MD</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
