responsivness and links

--- a/index.html
+++ b/index.html
@@ -95,17 +95,18 @@
       <!-- About-->
       <section class="resume-section" id="about">
         <div class="resume-section-content">
-          <h2 class="mb-0">
+          <div class="text-center">
+            <img
+              class="img-fluid img-profile rounded-circle d-lg-none mb-4 shadow"
+              src="assets/img/profile.png"
+              alt=""
+              width="200"
+            />
+          </div>
+          <h2 class="mb-3 d-none d-lg-block">
             Göktuğ Aşcı,
             <span class="text-danger"> MD</span>
           </h2>
-          <div class="subheading mb-5">
-            <a
-              href="mailto:drgoktugasci@gmail.com"
-              class="text-lowercase text-danger"
-              >drgoktugasci@gmail.com</a
-            >
-          </div>
           <p class="lead mb-5">
             I am a medical doctor who builds full-stack cross-platform mobile
             applications. My passion is to bridge the gap between software
@@ -114,23 +115,20 @@
             quality around the world.
           </p>
           <div class="social-icons">
+            <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"
+              ><i class="fas fa-envelope"></i
+            ></a>
             <a
-              class="social-icon"
+              class="social-icon shadow"
               href="https://www.linkedin.com/in/gokasci/"
               target="_blank"
               ><i class="fab fa-linkedin-in"></i
             ></a>
             <a
-              class="social-icon"
+              class="social-icon shadow"
               href="https://github.com/gasci"
               target="_blank"
               ><i class="fab fa-github"></i
-            ></a>
-            <a
-              class="social-icon"
-              href="https://www.facebook.com/gokasci"
-              target="_blank"
-              ><i class="fab fa-facebook-f"></i
             ></a>
           </div>
         </div>
@@ -139,7 +137,7 @@
       <!-- Experience-->
       <section class="resume-section" id="experience">
         <div class="resume-section-content">
-          <h2 class="mb-5">Experience</h2>
+          <h3 class="mb-5">Experience</h3>
           <div
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
@@ -152,8 +150,10 @@
                   href="http://mealdoc.com/"
                   target="_blank"
                   class="text-danger text-capitalize"
-                  >Mealdoc: AI Powered Healthy Diet, Healthcare</a
-                >
+                  >Mealdoc: AI Powered Healthy Diet, Healthcare&nbsp;<i
+                    class="fas fa-link"
+                  ></i
+                ></a>
               </div>
               <ul>
                 <li>
@@ -196,8 +196,8 @@
                   href="https://www.vincivc.com/"
                   target="_blank"
                   class="text-danger text-capitalize"
-                  >Vinci Venture Capital</a
-                >
+                  >Vinci Venture Capital&nbsp;<i class="fas fa-link"></i
+                ></a>
               </div>
               <ul>
                 <li>
@@ -231,8 +231,8 @@
                   href="https://www.curiosmo.com/"
                   target="_blank"
                   class="text-danger text-capitalize"
-                  >Curiosmo, Healthcare</a
-                >
+                  >Curiosmo, Healthcare&nbsp;<i class="fas fa-link"></i
+                ></a>
               </div>
               <ul>
                 <li>
@@ -258,8 +258,10 @@
                   href="https://medicine.yale.edu/lab/gunel/"
                   target="_blank"
                   class="text-danger text-capitalize"
-                  >Yale University School of Medicine, Gunel Lab</a
-                >
+                  >Yale University School of Medicine, Gunel Lab&nbsp;<i
+                    class="fas fa-link"
+                  ></i
+                ></a>
               </div>
               <ul>
                 <li>
@@ -286,15 +288,23 @@
       <!-- Education-->
       <section class="resume-section" id="education">
         <div class="resume-section-content">
-          <h2 class="mb-5">Education</h2>
+          <h3 class="mb-5">Education</h3>
           <div
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
               <h4 class="mb-0">IE SCHOOL OF HUMAN SCIENCES AND TECHNOLOGY</h4>
               <div class="subheading mb-3 text-capitalize">
-                Master’s in Business Analytics and Big Data
+                <a
+                  href="https://www.ie.edu/school-human-sciences-technology/masters/master-business-analytics-big-data/"
+                  target="_blank"
+                  class="text-danger text-capitalize"
+                  >Master’s in Business Analytics and Big Data&nbsp;<i
+                    class="fas fa-link"
+                  ></i>
+                </a>
               </div>
+
               <div>
                 <ul>
                   <li>IE - TEV Joint Full Scholarship</li>
@@ -312,7 +322,14 @@
           >
             <div class="flex-grow-1">
               <h4 class="mb-0">ISTANBUL UNIVERSITY, FACULTY OF MEDICINE</h4>
-              <div class="subheading mb-3 text-capitalize">Doctor of Medicine</div>
+              <div class="subheading mb-3 text-capitalize">
+                <a
+                  href="https://istanbultip.istanbul.edu.tr/en/_"
+                  target="_blank"
+                  class="text-danger text-capitalize"
+                  >Doctor of Medicine&nbsp;<i class="fas fa-link"></i>
+                </a>
+              </div>
               <div>
                 <ul>
                   <li>
@@ -335,7 +352,14 @@
               <h4 class="mb-0">
                 THE UNIVERSITY OF ANTWERP, SCHOOL OF MEDICINE
               </h4>
-              <div class="subheading mb-3 text-capitalize">Doctor of Medicine</div>
+              <div class="subheading mb-3 text-capitalize">
+                <a
+                  href="https://www.uantwerpen.be/en/"
+                  target="_blank"
+                  class="text-danger text-capitalize"
+                  >Doctor of Medicine&nbsp;<i class="fas fa-link"></i>
+                </a>
+              </div>
               <div>
                 <ul>
                   <li>ERASMUS Program | ERASMUS Scholarship</li>
@@ -353,10 +377,18 @@
           >
             <div class="flex-grow-1">
               <h4 class="mb-0">TEV İNANÇ HIGH SCHOOL</h4>
-              <div class="subheading mb-3 text-capitalize">Bachelor's Degree</div>
+              <div class="subheading mb-3 text-capitalize">
+                <a
+                  href="https://tevitol.k12.tr/"
+                  target="_blank"
+                  class="text-danger text-capitalize"
+                  >A Privately Funded High School for Gifted Students&nbsp;<i
+                    class="fas fa-link"
+                  ></i>
+                </a>
+              </div>
               <div>
                 <ul>
-                  <li>A Privately Funded High School for Gifted Students</li>
                   <li>Full Scholarship | Language of education: English</li>
                 </ul>
               </div>
