--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     <meta property="og:image" content="assets/img/profile.png" />
     <meta property="og:url" content="https://gasci.github.io/" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DL79QT8C8M"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-DL79QT8C8M");
+    </script>
+
     <title>Göktuğ Aşcı, MD</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
