--- a/index.html
+++ b/index.html
@@ -221,9 +221,12 @@
                 </li>
                 <li>
                   Originated 150+ companies and participated in 30+ meetings
-                  with new and portfolio companies. Created 2 one-pagers that
-                  summarize business models and opportunities of high potential
-                  companies for the investment committee.
+                  with new and portfolio companies.
+                </li>
+                <li>
+                  Created 2 one-pagers that summarize business models and
+                  opportunities of high potential companies for the investment
+                  committee.
                 </li>
               </ul>
             </div>
@@ -384,7 +387,7 @@
             <div class="flex-shrink-0 text-right">
               <span class="text-primary font-weight-bold">Antwerp, Belgium</span
               ><br />
-              <span class="text-primary">February 2017 - July 2018</span>
+              <span class="text-primary">February 2018 - July 2018</span>
             </div>
           </div>
           <div
