interests section added

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
           </li>
           <!--li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
+          </li-->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests"
               >Interests</a
             >
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li-->
         </ul>
@@ -110,7 +110,7 @@
       <!-- About-->
       <section class="resume-section" id="about">
         <div class="resume-section-content">
-          <div class="text-center">
+          <div class="text-center mb-3">
             <img
               class="img-fluid img-profile rounded-circle d-lg-none mb-4 shadow"
               src="assets/img/profile.png"
@@ -417,6 +417,22 @@
               <span class="text-primary">September 2009 - July 2014</span>
             </div>
           </div>
+        </div>
+      </section>
+      <hr class="m-0" />
+      <!-- Interests-->
+      <section class="resume-section" id="interests">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Interests</h2>
+          <p>
+            Apart from my professional career, I enjoy most of my time
+            running, playing table tennis and biking. I am an avid sprint runner and a city biker.
+          </p>
+          <p class="mb-0">
+            I enjoy reading and writing poetry. I follow a number of sci-fi and classical genre
+            movies. I spend a large amount of my free time exploring the latest technology
+            advancements in the healthcare technology world.
+          </p>
         </div>
       </section>
       <hr class="m-0" />
