--- a/index-develop.html
+++ b/index-develop.html
@@ -428,7 +428,7 @@
       <!-- Awards-->
       <section class="resume-section" id="awards">
         <div class="resume-section-content">
-          <h2 class="mb-5">Awards & Certifications</h2>
+          <h2 class="mb-5">Awards & Certifications & Publications</h2>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"
