--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             quality around the world." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/profile.png" />
-    <meta property="og:url" content="https://gasci.github.io/" />
+    <meta property="og:url" content="https://www.drgoktugasci.com/" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DL79QT8C8M"></script>
@@ -315,19 +315,18 @@
             <div class="resume-section-content">
                 <h3 class="mb-5">Skills</h3>
 
-                <h5>Project Development & Other</h5>
+                <h5>Project Development & Domain Specific</h5>
                 <ul>
-                    <li>Patient Care</li>
-                    <li>SCRUM
-                    </li>
-                    <li>Google Firebase Analytics</li>
+                    <li>Scrum</li>
+                    <li>Heroku</li>
                     <li>Git</li>
-                    <li>Adobe XD</li>
+                    <li>Google Firebase Analytics</li>
+                    <li>Clinical Research</li>
+                    <li>Patient Care</li>
                 </ul>
 
-                <h5>Software Development</h5>
+                <h5>Software Development & Design</h5>
                 <ul>
-
                     <li>Python
                     </li>
                     <li>Pandas
@@ -339,9 +338,11 @@
                     <li>AWS S3, RDS</li>
                     <li>Apache Cordova</li>
                     <li>Django</li>
+                    <li>Django Rest Framework</li>
                     <li>JavaScript</li>
                     <li>Vue</li>
                     <li>Bulma</li>
+                     <li>Adobe XD</li>
                 </ul>
             </div>
         </section>
