--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             >
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects"
+              >Projects</a
+            >
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
@@ -127,7 +132,7 @@
                             <li>
                                 Designed and developed all front-end (Buefy.js, Vue.js, Apache Cordova, jQuery, Bootstrap) and back-end (AWS RDS, AWS S3, Heroku, Django, Django Rest Framework) features of web, iOS and Android applications.
                             </li>
-                            <li>Integrated Google Fit and Apple HealthKit support.</li>
+                            <li>Integrated Google Fit and Apple HealthKit APIs.</li>
                             <li>
                                 Launched successful marketing campaigns for customer acquisition using Google Ads and Facebook Ads.
                             </li>
@@ -310,6 +315,35 @@
             </div>
         </section>
         <hr class="m-0" />
+        <!-- Projects-->
+        <section class="resume-section" id="projects">
+            <div class="resume-section-content">
+                <h3 class="mb-5">Projects</h3>
+                <ul class="fa-ul mb-0"><li>
+                        <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-dark"></i
+                ></span>Mealdoc: Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li><li>
+                        <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-dark"></i
+                ></span>Spark API: Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li><li>
+                        <a href="https://github.com/gasci/sentimental-tweet-analysis" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-dark"></i
+                ></span>Hadoop, Hive: Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-dark"></i
+                ></span>Curiosmo: Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li></ul>
+            </div>
+        </section>
+        <hr class="m-0" />
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
@@ -342,7 +376,7 @@
                     <li>JavaScript</li>
                     <li>Vue</li>
                     <li>Bulma</li>
-                     <li>Adobe XD</li>
+                    <li>Adobe XD</li>
                 </ul>
             </div>
         </section>
