--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
                 </ul>
             </div>
         </section>
+        <hr class="m-0" />
         <!-- Interests-->
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
