--- a/index.html
+++ b/index.html
@@ -453,6 +453,12 @@
                         </a>
                     </li>
                     <li>
+                        <a href="https://www.sololearn.com/Certificate/1093-1874014/jpg/" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i
+                ></span> SoloLearn &#183; Data Science with Python&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://ude.my/UC-GTRYOEVO" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i
                 ></span> Udemy &#183; The "Best" Startup Pitch Deck - How To Raise Venture Capital&nbsp;<i class="fas fa-link"></i>
