--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
                     <li>Heroku</li>
                     <li>Git</li>
                     <li>Google Firebase Analytics</li>
+                    <li>Google Firebase Cloud Messaging</li>
+                    <li>Google Ads/Admob/Adsense</li>
                     <li>Clinical Research</li>
                     <li>Patient Care</li>
                 </ul>
