--- a/index.html
+++ b/index.html
@@ -361,24 +361,37 @@
                     <li>Patient Care</li>
                 </ul>
 
-                <h5>Software Development & Design</h5>
+                
+                <h5 class="mt-4">Software Development & Design</h5>
+
+                <h6 class="mt-3">Front-End Development</h6>
                 <ul>
-                    <li>Python
-                    </li>
-                    <li>Pandas
-                    </li>
-                    <li>SQL</li>
-                    <li>Seaborn</li>
-                    <li>Matplotlib</li>
-                    <li>Apache Spark</li>
-                    <li>AWS S3, RDS</li>
+                    <li>JavaScript</li>
                     <li>Apache Cordova</li>
+                    <li>Vue.js</li>
+                    <li>Bootstrap</li>
+                    <li>Bulma</li>
+                    <li>Buefy.js</li>
+                    <li>Adobe XD</li>
+                </ul>
+
+                <h6>Back-End Development</h6>  
+                <ul>
+                    <li>Python</li>
                     <li>Django</li>
                     <li>Django Rest Framework</li>
-                    <li>JavaScript</li>
-                    <li>Vue</li>
-                    <li>Bulma</li>
-                    <li>Adobe XD</li>
+                    <li>AWS S3, RDS</li>
+                    <li>SQL</li>
+                </ul>
+
+                <h6>Data Science</h6>  
+                <ul>
+                    <li>Pandas</li>
+                    <li>Matplotlib</li>
+                    <li>Seaborn</li>
+                    <li>Scikit learn</li>
+                    <li>Apache Spark</li>
+                    <li>R</li>
                 </ul>
             </div>
         </section>
