pitch sentence fix punctuation

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
                     <span class="text-danger"> MD</span>
                 </h2>
                 <p class="lead mb-5">
-                    I am a medical doctor who builds full-stack cross-platform mobile applications. My passion is to bridge the gap between software engineering and medicine; to develop data-driven, inexpensive and simple, yet broadly applicable solutions to improve health
-                    care quality around the world.
+                    I am writing to express my strong interest in applying for the Product Manager position at Google Health Data Platform. I am a medical doctor who builds full-stack cross-platform mobile applications. My passion is to bridge the gap between software engineering and medicine to develop data-driven, inexpensive, and simple yet broadly applicable solutions to improve health care quality around the world. 
                 </p>
                 <div class="social-icons">
                     <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i class="fas fa-envelope"></i
