--- a/index.html
+++ b/index.html
@@ -318,23 +318,23 @@
         <section class="resume-section" id="projects">
             <div class="resume-section-content">
                 <h3 class="mb-5">Projects</h3>
-                <ul class="fa-ul mb-0"><li>
+                <ul class="fa-ul mb-0"><li class="mb-2">
                         <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-dark"></i
                 ></span>Mealdoc: Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
                         </a>
-                    </li><li>
+                    </li><li class="mb-2">
                         <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-dark"></i
                 ></span>Spark API: Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
                         </a>
-                    </li><li>
+                    </li><li class="mb-2">
                         <a href="https://github.com/gasci/sentimental-tweet-analysis" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-dark"></i
                 ></span>Hadoop, Hive: Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
-                    <li>
+                    <li class="mb-2">
                         <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-dark"></i
                 ></span>Curiosmo: Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
