--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
             >
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+                </li>
+            <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects"
               >Projects</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Certifications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#interests">Interests</a
             >
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Certifications</a>
-                </li>
             </ul>
         </div>
     </nav>
@@ -314,35 +314,6 @@
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Projects-->
-        <section class="resume-section" id="projects">
-            <div class="resume-section-content">
-                <h3 class="mb-5">Projects</h3>
-                <ul class="fa-ul mb-0"><li class="mb-2">
-                        <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-dark"></i
-                ></span>Mealdoc: Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li><li class="mb-2">
-                        <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-dark"></i
-                ></span>Spark API: Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li><li class="mb-2">
-                        <a href="https://github.com/gasci/sentimental-tweet-analysis" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-dark"></i
-                ></span>Hadoop, Hive: Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-dark"></i
-                ></span>Curiosmo: Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li></ul>
-            </div>
-        </section>
-        <hr class="m-0" />
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
@@ -395,16 +366,41 @@
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Interests-->
-        <section class="resume-section" id="interests">
+        <!-- Projects-->
+        <section class="resume-section" id="projects">
             <div class="resume-section-content">
-                <h3 class="mb-5">Interests</h3>
-                <p>
-                    Apart from my professional career, I enjoy most of my time running, playing table tennis and biking. I am an avid sprint runner and a city biker.
-                </p>
-                <p class="mb-0">
-                    I enjoy reading and writing poetry. I follow a number of sci-fi and classical genre movies. I spend a large amount of my free time exploring the latest technology advancements in the healthcare technology world.
-                </p>
+                <h3 class="mb-5">Projects <i class="fas fa-code text-warning"></i
+                > & Publications <i class="fas fa-book text-warning"></i
+                ></h3>
+                <ul class="fa-ul mb-0"><li class="mb-2">
+                        <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i
+                ></span>Mealdoc: Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li><li class="mb-2">
+                        <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i
+                ></span>Spark API: Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li><li class="mb-2">
+                        <a href="https://github.com/gasci/sentimental-tweet-analysis" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i
+                ></span>Hadoop, Hive: Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i
+                ></span>Curiosmo: Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                   <hr>
+                    <li>
+                        <a href="https://www.brainstimjrnl.com/article/S1935-861X(17)30408-4/abstract" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i
+                ></span> Transcranial direct current stimulation may enhance decision making in gambling disorder: A preliminary double-blind sham-controlled study&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li></ul>
             </div>
         </section>
         <hr class="m-0" />
@@ -413,8 +409,7 @@
             <div class="resume-section-content">
                 <h3 class="mb-5">
                     Certifications
-                    <i class="fas fa-certificate text-warning"></i> & Publications
-                    <i class="fas fa-book text-warning"></i> & Awards <i class="fas fa-trophy text-warning"></i>
+                    <i class="fas fa-certificate text-warning"></i> & Awards <i class="fas fa-trophy text-warning"></i>
                 </h3>
                 <ul class="fa-ul mb-0">
                     <li>
@@ -504,13 +499,6 @@
                     </li>
                     <hr />
                     <li>
-                        <a href="https://www.brainstimjrnl.com/article/S1935-861X(17)30408-4/abstract" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-book text-warning"></i
-                ></span> Transcranial direct current stimulation may enhance decision making in gambling disorder: A preliminary double-blind sham-controlled study&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li>
-                    <hr />
-                    <li>
                         <a href="https://tusiad.org/tr/tum/item/10605-tusi-ad-bu-genclikte-i-s-var-2020-odulleri-sahiplerini-buldu" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i
                 ></span> TÜSİAD Bu Gençlikte İş Var, Semi-Finalist, "Curiosmo"&nbsp;<i class="fas fa-link"></i>
@@ -547,6 +535,19 @@
 
                     </li>
                 </ul>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Interests-->
+        <section class="resume-section" id="interests">
+            <div class="resume-section-content">
+                <h3 class="mb-5">Interests</h3>
+                <p>
+                    Apart from my professional career, I enjoy most of my time running, playing table tennis and biking. I am an avid sprint runner and a city biker.
+                </p>
+                <p class="mb-0">
+                    I enjoy reading and writing poetry. I follow a number of sci-fi and classical genre movies. I spend a large amount of my free time exploring the latest technology advancements in the healthcare technology world.
+                </p>
             </div>
         </section>
     </div>
