--- a/index.html
+++ b/index.html
@@ -412,8 +412,14 @@
                     <i class="fas fa-certificate text-warning"></i> & Awards <i class="fas fa-trophy text-warning"></i>
                 </h3>
                 <ul class="fa-ul mb-0">
+                <li>
+                        <a href="assets/certificates/NOVA_mem_cert.pdf" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i
+                ></span> Nova Talent &#183; Membership Certificate&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
                     <li>
-                        <a href="https://edevlet.kosgeb.gov.tr/BelgeDogrulama" target="_blank" class="text-danger">
+                        <a href="assets/certificates/KOSGEB_gel_cert.pdf" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i
                 ></span> KOSGEB &#183; Entrepreneurship Training&nbsp;<i class="fas fa-link"></i>
                         </a>
