--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                     Apart from my professional career, I enjoy most of my time running, playing table tennis and biking. I am an avid sprint runner and a city biker.
                 </p>
                 <p class="mb-0">
-                    I enjoy reading and writing poetry. I follow a number of sci-fi and classical genre movies. I spend a large amount of my free time exploring the latest technology advancements in the healthcare technology world.
+                    I enjoy reading and writing poetry. I follow a number of sci-fi and classical genre movies. I spend a large amount of my free time exploring the latest technology advancements in the healthcare world.
                 </p>
             </div>
         </section>
