--- a/index.html
+++ b/index.html
@@ -321,7 +321,6 @@
 
                 <h5>Project Development & Domain Specific</h5>
                 <ul>
-                    <li>Scrum</li>
                     <li>Heroku</li>
                     <li>Git</li>
                     <li>Google Firebase Analytics</li>
@@ -329,6 +328,8 @@
                     <li>Google Ads/Admob/Adsense</li>
                     <li>Clinical Research</li>
                     <li>Patient Care</li>
+                    <li>HubSpot</li>
+                    <li>Scrum</li>
                 </ul>
 
                 
