--- a/index.html
+++ b/index.html
@@ -550,10 +550,10 @@
             <div class="resume-section-content">
                 <h3 class="mb-5">Interests</h3>
                 <p>
-                    Apart from my professional career, I enjoy most of my time running, playing table tennis and biking. I am an avid sprint runner and a city biker.
+                    Apart from my professional career, I enjoy running, playing table tennis, and biking. I am an avid sprint runner and a city biker.
                 </p>
                 <p class="mb-0">
-                    I enjoy reading and writing poetry. I follow a number of sci-fi and classical genre movies. I spend a large amount of my free time exploring the latest technology advancements in the healthcare world.
+                    I like reading and writing poetry. In addition to this, I spend a substantial amount of my free time exploring the latest technology advancements in the health care world.
                 </p>
             </div>
         </section>
