--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
                 </li>
-            <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects"
-              >Projects</a
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#projects">Projects</a
             >
           </li>
           <li class="nav-item">
@@ -105,8 +104,8 @@
             ></a>
                     <a class="social-icon shadow" href="https://github.com/gasci" target="_blank"><i class="fab fa-github"></i
             ></a>
-                </div>
-            </div>
+        </div>
+        </div>
         </section>
         <hr class="m-0" />
         <!-- Experience-->
@@ -318,52 +317,61 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h3 class="mb-5">Skills</h3>
+                <div class="row">
+                    <div class="col-xl">
+                        <h5>Software Development & Design</h5>
 
-                <h5>Project Development & Domain Specific</h5>
-                <ul>
-                    <li>Heroku</li>
-                    <li>Git</li>
-                    <li>Google Firebase Analytics</li>
-                    <li>Google Firebase Cloud Messaging</li>
-                    <li>Google Ads/Admob/Adsense</li>
-                    <li>Clinical Research</li>
-                    <li>Patient Care</li>
-                    <li>HubSpot</li>
-                    <li>Scrum</li>
-                </ul>
+                        <h6 class="mt-3">Front-End Development</h6>
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>Apache Cordova</li>
+                            <li>Vue.js</li>
+                            <li>Bootstrap</li>
+                            <li>Bulma</li>
+                            <li>Buefy.js</li>
+                            <li>Adobe XD</li>
+                        </ul>
 
-                
-                <h5 class="mt-4">Software Development & Design</h5>
+                        <h6>Back-End Development</h6>
+                        <ul>
+                            <li>Python</li>
+                            <li>Django</li>
+                            <li>Django Rest Framework</li>
+                            <li>AWS S3, RDS</li>
+                            <li>SQL</li>
+                        </ul>
 
-                <h6 class="mt-3">Front-End Development</h6>
-                <ul>
-                    <li>JavaScript</li>
-                    <li>Apache Cordova</li>
-                    <li>Vue.js</li>
-                    <li>Bootstrap</li>
-                    <li>Bulma</li>
-                    <li>Buefy.js</li>
-                    <li>Adobe XD</li>
-                </ul>
+                        <h6>Data Science</h6>
+                        <ul>
+                            <li>Pandas</li>
+                            <li>Matplotlib</li>
+                            <li>Seaborn</li>
+                            <li>Scikit learn</li>
+                            <li>Apache Spark</li>
+                            <li>R</li>
+                        </ul>
+                    </div>
+                    <div class="col-xl">
+                        <h5>Project Development & Domain Specific</h5>
+                        <ul>
+                            <li>Heroku</li>
+                            <li>Git</li>
+                            <li>Google Firebase Analytics</li>
+                            <li>Google Firebase Cloud Messaging</li>
+                            <li>Google Ads/Admob/Adsense</li>
+                            <li>Clinical Research</li>
+                            <li>Patient Care</li>
+                            <li>HubSpot</li>
+                            <li>Scrum</li>
+                        </ul>
 
-                <h6>Back-End Development</h6>  
-                <ul>
-                    <li>Python</li>
-                    <li>Django</li>
-                    <li>Django Rest Framework</li>
-                    <li>AWS S3, RDS</li>
-                    <li>SQL</li>
-                </ul>
+                    </div>
+                </div>
 
-                <h6>Data Science</h6>  
-                <ul>
-                    <li>Pandas</li>
-                    <li>Matplotlib</li>
-                    <li>Seaborn</li>
-                    <li>Scikit learn</li>
-                    <li>Apache Spark</li>
-                    <li>R</li>
-                </ul>
+
+
+
+
             </div>
         </section>
         <hr class="m-0" />
@@ -377,13 +385,15 @@
                         <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
                 ></span>Mealdoc: Your personal diet assistant. We prepare artificial intelligence powered personalized diet lists. Enter your information and find personalized meal suggestions. Track your calorie intake. Collect your own recipes and discover healthy recipes.&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li><li class="mb-2">
+                    </a>
+                    </li>
+                    <li class="mb-2">
                         <a href="https://github.com/gasci/australian-rainfall-spark" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
                 ></span>Spark API: Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
                         </a>
-                    </li><li class="mb-2">
+                    </li>
+                    <li class="mb-2">
                         <a href="https://github.com/gasci/sentimental-tweet-analysis" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
                 ></span>Hadoop, Hive: Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
@@ -395,13 +405,14 @@
                 ></span>Curiosmo: Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
-                   <hr>
+                    <hr>
                     <li>
                         <a href="https://www.brainstimjrnl.com/article/S1935-861X(17)30408-4/abstract" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-book text-warning"></i
                 ></span> Transcranial direct current stimulation may enhance decision making in gambling disorder: A preliminary double-blind sham-controlled study&nbsp;<i class="fas fa-link"></i>
                         </a>
-                    </li></ul>
+                    </li>
+                    </ul>
             </div>
         </section>
         <hr class="m-0" />
@@ -413,7 +424,7 @@
                     <i class="fas fa-certificate text-warning"></i> & Awards <i class="fas fa-trophy text-warning"></i>
                 </h3>
                 <ul class="fa-ul mb-0">
-                <li>
+                    <li>
                         <a href="assets/certificates/NOVA_mem_cert.pdf" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i
                 ></span> Nova Talent &#183; Membership Certificate&nbsp;<i class="fas fa-link"></i>
@@ -557,12 +568,12 @@
                 </p>
             </div>
         </section>
-    </div>
-    <footer class="footer">
-        <div class="container p-3">
-            <div class="text-center center-block">
-                <div class="text-muted mb-2">&copy; 2021 &#183; Göktuğ Aşcı, MD</div>
-                <a class="" href="mailto:drgoktugasci@gmail.com"><i class="fas fa-2x fa-envelope social"></i></a
+        </div>
+        <footer class="footer">
+            <div class="container p-3">
+                <div class="text-center center-block">
+                    <div class="text-muted mb-2">&copy; 2021 &#183; Göktuğ Aşcı, MD</div>
+                    <a class="" href="mailto:drgoktugasci@gmail.com"><i class="fas fa-2x fa-envelope social"></i></a
           >&nbsp;&nbsp;&nbsp;
           <a
             class=""
@@ -573,16 +584,16 @@
           <a class="" href="https://github.com/gasci" target="_blank"
             ><i class="fab fa-2x fa-github social"></i
           ></a>
+                </div>
             </div>
-        </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Third party plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
 </body>
 
 </html>
