--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <h3 class="mb-5">Skills</h3>
                 <div class="row">
                     <div class="col-xl">
-                        <h5>Software Development & Design</h5>
+                        <h5 class="text-warning">Software Development & Design</h5>
 
                         <h6 class="mt-3">Front-End Development</h6>
                         <ul>
@@ -352,7 +352,8 @@
                         </ul>
                     </div>
                     <div class="col-xl">
-                        <h5>Project Development & Domain Specific</h5>
+                        <br class="mb-4 d-block d-xl-none">
+                        <h5 class="text-warning">Project Development & Domain Specific</h5>
                         <ul>
                             <li>Heroku</li>
                             <li>Git</li>
