--- a/index.html
+++ b/index.html
@@ -353,17 +353,23 @@
                     </div>
                     <div class="col-xl">
                         <br class="mb-4 d-block d-xl-none">
-                        <h5 class="text-warning">Project Development & Domain Specific</h5>
+                        <h5 class="text-warning">Product Development & Domain Specific</h5>
+                        
+                        <h6 class="mt-3">Product Development</h6>
                         <ul>
                             <li>Heroku</li>
                             <li>Git</li>
                             <li>Google Firebase Analytics</li>
                             <li>Google Firebase Cloud Messaging</li>
                             <li>Google Ads/Admob/Adsense</li>
-                            <li>Clinical Research</li>
-                            <li>Patient Care</li>
                             <li>HubSpot</li>
                             <li>Scrum</li>
+                        </ul>
+
+                        <h6>Domain Knowledge</h6>
+                        <ul>
+                            <li>Clinical Research</li>
+                            <li>Patient Care</li>
                         </ul>
 
                     </div>
