--- a/index.html
+++ b/index.html
@@ -401,6 +401,12 @@
                         </a>
                     </li>
                     <li class="mb-2">
+                        <a href="https://github.com/gasci/simple-eda-titanic" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i
+                ></span>Simple Exploratory Data Analysis of Determinants of Survival in the Wreck of the Titanic &nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
                         <a href="https://github.com/gasci/sentimental-tweet-analysis" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
                 ></span>Hadoop, Hive: Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
@@ -410,6 +416,12 @@
                         <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
                 ></span>Curiosmo: Your personalized exam assistant. Learn by questions with explanations; customize your study sessions.&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="http://www.itfnoroloji.org/" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i
+                ></span>Istanbul University Faculty of Medicine, Neurology Department: Official Website&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <hr>
