--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
                             <li>Django Rest Framework</li>
                             <li>AWS S3, RDS</li>
                             <li>SQL</li>
+                            <li>MongoDB</li>
                         </ul>
 
                         <h6>Data Science</h6>
@@ -348,6 +349,8 @@
                             <li>Seaborn</li>
                             <li>Scikit learn</li>
                             <li>Apache Spark</li>
+                            <li>Apache Hadoop</li>
+                            <li>Apache HBase</li>
                             <li>R</li>
                         </ul>
                     </div>
@@ -374,10 +377,6 @@
 
                     </div>
                 </div>
-
-
-
-
 
             </div>
         </section>
