--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <li>MongoDB</li>
                         </ul>
 
-                        <h6>Data Science</h6>
+                        <h6>Data Science & Big Data</h6>
                         <ul>
                             <li>Pandas</li>
                             <li>Matplotlib</li>
