--- a/index.html
+++ b/index.html
@@ -403,6 +403,17 @@
                         </a>
                     </li>
                     <li class="mb-2">
+                        <a href="https://github.com/gasci/bike-count-prediction" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="https://github.com/gasci/spanish-power-price-prediction" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Prediction of Spanish power market daily prices&nbsp;
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
                         <a href="https://github.com/gasci/simple-eda-titanic" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
                 ></span>Simple Exploratory Data Analysis of Determinants of Survival in the Wreck of the Titanic &nbsp;<i class="fas fa-link"></i>
