--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 ></span>Spark API: Analysis of Australian Rainfall On Which Australian Regions and Weather Components Do We Have to Focus to Predict and Improve The Rainfall&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
-                    <li class="mb-2">
+                    <!-- <li class="mb-2">
                         <a href="https://github.com/gasci/bike-count-prediction" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Prediction of the total number of Washington D.C. bicycle users on an hourly basis&nbsp;<i class="fas fa-link"></i>
                         </a>
@@ -412,7 +412,7 @@
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Prediction of Spanish power market daily prices&nbsp;
                             <i class="fas fa-link"></i>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="mb-2">
                         <a href="https://github.com/gasci/simple-eda-titanic" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i
